new rotes and dependencies for the ui

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -43,7 +43,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/table">Table</a></li>
             </ul>
           </div>
         </div>
@@ -88,6 +88,7 @@
     <script src="bower_components/pikaday/pikaday.js"></script>
     <script src="bower_components/handsontable/dist/handsontable.js"></script>
     <script src="bower_components/ngHandsontable/dist/ngHandsontable.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -95,6 +96,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/table.js"></script>
+        <script src="scripts/services/datafactory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
