added new services and values to the index.

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -94,10 +94,15 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <!-- controllers -->
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/table.js"></script>
-        <script src="scripts/services/datafactory.js"></script>
+        <!-- services -->
+        <script src="scripts/services/dataFactoryService.js"></script>
+        <script src="scripts/services/queryService.js"></script>
+        <!-- values -->
+        <script src="scripts/values/apiUrls.js"></script>
         <!-- endbuild -->
 </body>
 </html>
