--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -93,6 +93,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
+    <script src="bower_components/angular-websocket/dist/angular-websocket.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -111,6 +112,7 @@
         <script src="scripts/services/addService.js"></script>
         <!-- values -->
         <script src="scripts/values/apiUrls.js"></script>
+        <script src="scripts/services/websocketservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
