--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -113,6 +113,7 @@
         <!-- values -->
         <script src="scripts/values/apiUrls.js"></script>
         <script src="scripts/services/websocketservice.js"></script>
+        <script src="scripts/controllers/websocket.js"></script>
         <!-- endbuild -->
 </body>
 </html>
